@@ -130,6 +130,8 @@ interrupts.
 
 =head2 Pulse Width Modulation (PWM)
 
+=head3 Basics
+
 Pulse Width Modulation kind of acts like a potentiometer (or a variable
 switch... like a light dimmer). They are used to send pulses of electricity
 to a device across time. It is required for things like stepper motors, or
@@ -154,6 +156,38 @@ hardware-based PWM (GPIO #18).
         $pin->pwm($_);
         usleep 50000;
     }
+
+=head3 PWM Clock
+
+The PWM clock can be set to control the PWM pulse widths. The PWM clock is
+derived from a 19.2MHz clock. You can set any divider.
+
+For example, say you wanted to drive a DC motor with PWM at about 1kHz, and
+control the speed in 1/1024 increments from 0/1024 (stopped) through to
+1024/1024 (full on). In that case you might set the clock divider to be 16, and
+the RANGE to 1024. The pulse repetition frequency will be
+1.2MHz/1024 = 1171.875Hz.
+
+Example:
+
+    $pi->pwm_clock(16);
+
+=head3 PWM Mode
+
+Each PWM channel can run in either Balanced or Mark-Space mode. In Balanced
+mode, the hardware sends a combination of clock pulses that results in an
+overall DATA pulses per RANGE pulses. In Mark-Space mode, the hardware sets the
+output HIGH for DATA clock pulses wide, followed by LOW for RANGE-DATA clock
+pulses.
+
+The Raspberry Pi default is balanced mode.
+
+C<0> for Mark-Space or C<1> for balanced. If you're using
+C<RPi::WiringPi::Constant>, you can also use C<PWM_MODE_MS> or C<PWM_MODE_BAL>.
+
+Example:
+
+    $pi->pwm_mode(0);
 
 =head2 Interrupt usage
 
