@@ -81,6 +81,25 @@ sub pwm_range {
     }
     return defined $self->{pwm_range} ? $self->{pwm_range} : 1023;
 }
+sub pwm_clock {
+    my ($self, $divisor) = @_;
+    if (defined $divisor){
+        $self->{pwm_divisor} = $divisor;
+        $self->pwm_set_clock($divisor);
+    }
+    return defined $self->{pwm_clock} ? $self->{pwm_clock} : 32;
+}
+sub pwm_mode {
+    my ($self, $mode) = @_;
+    if (defined $mode && ($mode ==0 || $mode == 1)){
+        $self->{pwm_mode} = $mode;
+        $self->pwm_set_mode($mode);
+    }
+    else {
+        die "pwm_mode() requires either 0 or 1 if a param is sent in\n";
+    }
+    return defined $self->{pwm_mode} ? $self->{pwm_mode} : 1;
+}
 sub export_pin {
     my ($self, $pin) = @_;
     system "sudo", "gpio", "export", $self->pin_to_gpio($pin), "in";
@@ -275,6 +294,41 @@ Mandatory: An integer specifying the high-end of the range. The range always
 starts at C<0>. Eg: if C<$range> is C<359>, if you incremented PWM by C<1>
 every second, you'd rotate a step motor one complete rotation in exactly one
 minute.
+
+=head2 pwm_mode($mode)
+
+Each PWM channel can run in either Balanced or Mark-Space mode. In Balanced
+mode, the hardware sends a combination of clock pulses that results in an
+overall DATA pulses per RANGE pulses. In Mark-Space mode, the hardware sets the
+output HIGH for DATA clock pulses wide, followed by LOW for RANGE-DATA clock
+pulses.
+
+Raspberry Pi's default mode is balanced mode.
+
+Parameters:
+
+    $mode
+
+Mandatory, Integer: C<0> for Mark-Space mode, or C<1> for Balanced mode.
+Note: If using L<RPi::WiringPi::Constant>, you can use C<PWM_MODE_MS> or
+C<PWM_MODE_BAL>.
+
+=head2 pwm_clock($divisor)
+
+The PWM clock can be set to control the PWM pulse widths. The PWM clock is
+derived from a 19.2MHz clock. You can set any divider.
+
+For example, say you wanted to drive a DC motor with PWM at about 1kHz, and
+control the speed in 1/1024 increments from 0/1024 (stopped) through to
+1024/1024 (full on). In that case you might set the clock divider to be 16, and
+the RANGE to 1024. The pulse repetition frequency will be
+1.2MHz/1024 = 1171.875Hz.
+
+Parameters:
+
+    $divisor
+
+Mandatory, Integer: An unsigned integer to set the pulse width to.
 
 =head2 export_pin($pin_num)
 
