@@ -9,6 +9,7 @@ Revision history for Perl extension RPi::WiringPi.
         - alphabeticalized public methods within the code
         - added full support for the HCSR04 ultrasonic distance measurement
           sensor (closes #42)
+        - Util now exposes pwm_mode() and pwm_clock()
 
 2.3619  2017-07-04
         - hid all of the setup() tests. Somewhere in the last commits we broke
